# soft-eng-challenge

./: manage.py  pyproject.toml  requirements.txt
alien_api/: asgi.py  settings.py  urls.py
api/: responses.py  serializers.py  services.py  urls.py  views.py
api/migrations/: 0001_initial.py
flugel_challenge/alien_api/: settings.py  urls.py  wsgi.py
flugel_challenge/api/: admin.py  models.py  tests.py  views.py
